--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [tool.poetry]
 name = "zdppy_requests"
-version = "0.1.0"
-description = ""
+version = "0.1.1"
+description = "发送HTTP请求的库"
 authors = ["zhangdapeng <pygosuperman@outlook.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-zdppy-log = "^0.1.5"
+python = "^3.10"
 
 [tool.poetry.dev-dependencies]
 
