新增：基础代码

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
-name = "zdppy_requests"
-version = "0.1.2"
-description = "发送HTTP请求的库"
-authors = ["zhangdapeng <pygosuperman@outlook.com>"]
+name = "zdppy-requests"
+version = "0.1.0"
+description = ""
+authors = ["zhangdapeng520 <1156956636@qq.com>"]
+readme = "README.md"
+packages = [{include = "zdppy_requests"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 
-[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
